# journal

./: README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: data_quality_issues.md  es_journal_references.md  field_analysis.md  pmc_content_sources.md  sibils_es_indexes.md  sibils_es_indexes_detailed.md  sibils_medline_ta_analysis.md
issn_unifier/: README.md  __init__.py  __main__.py  config.py  download.py  merger.py  models.py  sibils_filter.py  stats.py  unify.py  validators.py
issn_unifier/exporters/: elasticsearch.py
issn_unifier/loaders/: __init__.py  doaj.py  europepmc.py  nlm.py  openalex.py  utils.py
issn_unifier/normalizers/: licenses.py  preservation.py  text.py
src/sibils_journals/: README.md  __init__.py  __main__.py  config.py  download.py  merger.py  metrics.py  models.py  sibils_fetch.py  sibils_filter.py  unify.py  validators.py
src/sibils_journals/exporters/: __init__.py  csv.py  elasticsearch.py  summary.py
src/sibils_journals/loaders/: __init__.py  crossref.py  doaj.py  issn.py  jstage.py  lsiou.py  openalex.py  pmc.py  wikidata.py
src/sibils_journals/normalizers/: __init__.py  deposit_policy.py  geography.py  identifiers.py  languages.py  review_process.py  subjects.py  utils.py
